--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: hbaproject.hbaproject.HBAProject
 api-version: 1.16
 authors: [ Hyunsol ]
 description: HBAProject Plugin
+depend: [ProtocolLib]
+commands:
+  helloworld:
