--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
 
+        <repository>
+            <id>dmulloy2-repo</id>
+            <url>https://repo.dmulloy2.net/repository/public/</url>
+        </repository>
+
     </repositories>
 
     <dependencies>
@@ -71,6 +76,12 @@
             <artifactId>paper-api</artifactId>
             <version>1.16.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.comphenix.protocol</groupId>
+            <artifactId>ProtocolLib</artifactId>
+            <version>4.6.0</version>
         </dependency>
 
     </dependencies>
